# LineForge

./: .gitattributes  .gitignore  README.md  __init__.py  mypy.ini  normalize.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml
tests/: __init__.py  fix_test_file.py  test_binary_handling.py  test_coverage_completion.py  test_edge_cases.py  test_error_handling.py  test_main.py  test_normalize.py
tests/test_files/: __init__.py  mixed.txt
